added deleuze pages

--- a/ai-hermeneutics-kit.html
+++ b/ai-hermeneutics-kit.html
@@ -30,9 +30,11 @@
           <li><a href="ai-kit-hermeneutics-of-risk.html">AI and the Hermeneutics of Risk: New Forms of Dialogue and Danger</a></li>
         </ul>
 
-        <h3 style="margin-top: 1.5rem; font-size: 1.2rem;">A Practical Method for Reading</h3>
+        <h3 style="margin-top: 1.5rem; font-size: 1.2rem;">Deleuze</h3>
         <ul>
-            <li><a href="ai-kit-forensics.html">Reception & Form Diagnostics</a></li>
+            <li><a href="ai-kit-deleuze-goodwill.html">The Unfriendly Philosopher: Deleuze's Rejection of Goodwill</a></li>
+            <li><a href="ai-kit-deleuze-forces.html">Active vs. Reactive Reading: A Deleuzian Diagnostic for AI</a></li>
+            <li><a href="ai-kit-deleuze-monotony.html">Monstrous Monotony: The AI as a Deleuzian Machine</a></li>
         </ul>
 
         <h3 style="margin-top: 1.5rem; font-size: 1.2rem;">Further Frameworks</h3>
