expanded deleuze section

--- a/ai-hermeneutics-kit.html
+++ b/ai-hermeneutics-kit.html
@@ -30,13 +30,13 @@
           <li><a href="ai-kit-hermeneutics-of-risk.html">AI and the Hermeneutics of Risk: New Forms of Dialogue and Danger</a></li>
         </ul>
 
-        <h3 style="margin-top: 1.5rem; font-size: 1.2rem;">Deleuze</h3>
+<h3 style="margin-top: 1.5rem; font-size: 1.2rem;">Deleuze</h3>
         <ul>
-            <li><a href="ai-kit-deleuze-goodwill.html">The Unfriendly Philosopher: Deleuze's Rejection of Goodwill</a></li>
-            <li><a href="ai-kit-deleuze-forces.html">Active vs. Reactive Reading: A Deleuzian Diagnostic for AI</a></li>
+            <li><a href="ai-kit-deleuze-goodwill.html">Beyond Goodwill: The Text as a Deleuzian Machine</a></li>
+            <li><a href="ai-kit-deleuze-forces.html">Active vs. Reactive: A Deleuzian Diagnostic for AI Production</a></li>
             <li><a href="ai-kit-deleuze-monotony.html">Monstrous Monotony: The AI as a Deleuzian Machine</a></li>
+            <li><a href="ai-kit-deleuze-assemblage.html">The Human-AI Assemblage: A New Desiring-Machine</a></li>
         </ul>
-
         <h3 style="margin-top: 1.5rem; font-size: 1.2rem;">Further Frameworks</h3>
         <ul>
           <li><a href="ai-kit-distanciation.html">Distanciation & AI (Ricoeur's Framework)</a></li>
