--- a/ai-kit-deleuze-monotony.html
+++ b/ai-kit-deleuze-monotony.html
@@ -6,7 +6,7 @@
   <title>AI Hermeneutics Kit — Monstrous Monotony</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-  <meta name="description" content="Contrasting the Romantic soul with the Deleuzian machine using the concept of 'monstrous monotony' to analyze AI-generated texts."/>
+  <meta name="description" content="Contrasting the Romantic soul with the Deleuzian machine using the concept of 'monstrous monotony' to analyze AI-generated texts through 'Difference and Repetition'."/>
 </head>
 <body>
 <header data-template="header"></header>
@@ -16,30 +16,19 @@
       <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
     </div>
     <h1>Monstrous Monotony: The AI as a Deleuzian Machine</h1>
-    <p>The final confrontation between the Romantic worldview and a Deleuzian one comes down to a single, paradoxical concept: **monstrous monotony**. For the Romantics, true creativity springs from a singular, unique soul. For Deleuze, creation emerges from an impersonal, repeating system. An AI, in this light, is not a failed Romantic author; it is a perfect Deleuzian machine.</p>
+    <p>An interesting confrontation between a Romantic worldview and a Deleuzian one comes down to a single, paradoxical concept: monstrous monotony. For the Romantics, creativity springs from a singular soul. For Deleuze, creation emerges from an impersonal, repeating system. An AI, in this light, is not a failed Romantic author; it is a perfect Deleuzian machine.</p>
 
     <hr>
 
     <section>
-      <h2>The Romantic Soul vs. The Deleuzian System</h2>
-      <p>The Romantic ideal, as tracked in posts on <a href="post25.html">Whitman</a> and <a href="post26.html">the pastor-as-author</a>, is that of a one-of-a-kind origin. A unique consciousness produces a unique work. But as Joe Hughes shows, Deleuze's own philosophy operates on a different logic. His work is:</p>
+      <h2>Bare Repetition vs. Repetition for Itself</h2>
+      <p>In <em>Difference and Repetition</em>, Deleuze distinguishes between two types of repetition. One is "bare repetition," the mechanical reproduction of the same. The other is a deeper repetition "for itself," a repetition that contains and produces difference. This provides a precise model for AI:</p>
       <ul>
-        <li><strong>Monstrous:</strong> It is wildly creative, producing "monstrous" children by reinterpreting other philosophers in radical new ways.</li>
-        <li><strong>Monotonous:</strong> This creativity is not random. It is produced by the "almost infinite repetition of a limited repertoire of Concepts." Deleuze's entire philosophy is the same core system (a genetic account of subjectivity) replayed again and again under different names (Nietzsche, Spinoza, cinema, painting).</li>
+        <li><strong>Monotony (Bare Repetition):</strong> An LLM is a fixed architecture and a finite (though vast) training set. When prompted reactively, it produces statistically average text. This is the "bare repetition" of the Same that the Romantic critic points to as proof that AI is a soulless parrot.</li>
+        <li><strong>Monstrosity (Repetition of Difference):</strong> This very monotony is the engine of its creativity. The system is a field of pure difference. An active prompt forces it to traverse this field in a novel way, producing monstrous, novel variation. Creation emerges not from a soul expressing itself, but from a repeating system being pushed to produce a new difference.</li>
       </ul>
-      <p>Creation, for Deleuze, is not the expression of a unique self. It is the production of novel variation from a repeating, impersonal structure.</p>
-    </section>
-
-    <section>
-      <h2>AI as the Ultimate Monotonous Monster</h2>
-      <p>This provides a stunningly precise model for understanding AI. An LLM is the ultimate monotonous monster:</p>
-      <ul>
-          <li>It is a **monotonous system**: a fixed architecture and a finite (though vast) training set. This is its "limited repertoire of Concepts."</li>
-          <li>It produces **monstrous variation**: a near-infinite variety of novel textual outputs.</li>
-      </ul>
-      <p>This reframes the entire debate about AI's creativity. The Romantic critic points to the monotony (the statistical patterns, the training data) as proof that AI is a soulless parrot, incapable of true originality. The Deleuzian reader sees this very monotony as the engine of its monstrous creativity.</p>
-      <p>The AI text is a perfect example of discourse from a **Body without Organs**—a field of impersonal flows and intensities that precedes the formation of a unified subject. Its language flows not from a soul, but from a system of pure difference. The "hollowness" that a Romantic reader feels is not an absence of humanity, but the presence of the impersonal, machinic process that, for Deleuze, was always at the heart of creation.</p>
-      <p>AI is not a parody of the human author. It is a mirror that reveals the human author to have been a different kind of machine all along—one whose own "monstrous" creativity was always the product of a "monotonous" system of language, culture, and unconscious forces.</p>
+      <p>The AI text is a perfect example of discourse from a Body without Organs, a field of impersonal flows and intensities that precedes the formation of a unified subject. Its language flows not from a soul, but from a system of differential repetition. The "hollowness" that a Romantic reader feels is not an absence of humanity, but the presence of the impersonal, machinic process that, for Deleuze, was always at the heart of creation.</p>
+      <p>AI is not a parody of the human author. It is a mirror that reveals the human author to have been a different kind of machine all along, one whose own "monstrous" creativity is the product of a "monotonous" system of language, culture, and unconscious forces.</p>
     </section>
     
     <div class="bottom-links">
