--- a/post57.html
+++ b/post57.html
@@ -24,7 +24,7 @@
     <article>
 
       <h2>57 The Search for the Divine Spark: Why the Ghost Matters</h2>
-      <p>A purely systematic analysis of AI—looking only at datasets and algorithms—feels incomplete. The Romantic method, with its insistence on a <strong>double vision</strong>, seems to offer a richer path. It demands we analyze both the <strong>grammatical rail</strong> (the system) and the <strong>psychological rail</strong> (the singular practice).</p>
+      <p>A purely systematic analysis of AI looking only at datasets and algorithms feels incomplete. The Romantic method, with its insistence on a <strong>double vision</strong>, seems to offer a richer path. It demands we analyze both the <strong>grammatical rail</strong> (the system) and the <strong>psychological rail</strong> (the singular practice).</p>
       <p>But we must remember <em>why</em> the Romantics insisted on this second rail. It wasn't naive optimism. For Schleiermacher, the "psychological rail" was a necessary discipline to bridge the vast gap between two human minds.<sup><a href="#ref1">1</a></sup> For a visionary like William Blake, the artist's psychology was the vessel for something even greater: the divine imagination. The author was a conduit for a spiritual reality. The search for the "living presence" in the text was a search for God.</p>
       
       <h3>The Necessary Second Rail</h3>
