added butler section

--- a/ai-kit-glossary.html
+++ b/ai-kit-glossary.html
@@ -26,7 +26,7 @@
     <p>Essential terms for AI hermeneutics. Each entry gives a crisp definition plus a <em>why it matters for AI texts</em> note so readers can immediately apply it in practice.</p>
 
     <dl>
-      <dt>Absolute Distanciation <span class="small">(editor’s term)</span></dt>
+      <dt>Absolute Distanciation <span class="small">(a "creative" adaptation of Ricoeur's term)</span></dt>
       <dd>Shorthand for the extreme textual distance of AI outputs: unlike human writing (which becomes autonomous through inscription), AI texts begin without an originating consciousness.</dd>
       <p class="why"><strong>Why it matters:</strong> It justifies author-agnostic reading methods that focus on form, reception, and the text's projected world.</p>
 
