--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="post62.html">62 A Practical Method for Reading AI: Archaeology and Teleology</a></li>
                 <li><a href="post61.html">61 A Conflict of Interpretations: Ricoeur's Method for Reading AI</a></li>
                 <li><a href="post60.html">60 Sleep Well! The Unconscious Arrogance of Medieval Sermon Technology</a></li>
-                <li><a href="post59.html">59 Putting the Toolkit to Work: A Hermeneutic Stress-Test on "Hero"</a></li>
+                <li><a href="post59.html">59 The Cowboy and the Machine: A Final Reading of "Hero"</a></li>
                 <li><a href="post58.html">58 The Final Triumph of the Mechanical Age: A Coda</a></li>
                 <li><a href="post57.html">57 The Search for the Divine Spark: Why the Ghost Matters</a></li>
                 <li><a href="post56.html">56 The Monstrous Parody of Synthetic Individuality</a></li>
