--- a/post57.html
+++ b/post57.html
@@ -28,7 +28,7 @@
       <p>But we must remember <em>why</em> the Romantics insisted on this second rail. It wasn't naive optimism. For Schleiermacher, the "psychological rail" was a necessary discipline to bridge the vast gap between two human minds.<sup><a href="#ref1">1</a></sup> For a visionary like William Blake, the artist's psychology was the vessel for something even greater: the divine imagination. The author was a conduit for a spiritual reality. The search for the "living presence" in the text was a search for God.</p>
       
       <h3>The Necessary Second Rail</h3>
-      <p>When we analyze an AI text, the grammatical rail is real. There <em>is</em> a system. But the psychological rail—the search for a singular, visionary "voice"—has no corresponding reality. And more importantly, the spiritual quest it was designed for—the communion with another soul touched by the divine—is impossible. There is no soul in the machine.</p>
+      <p>When we analyze an AI text, the grammatical rail is real. There <em>is</em> a system. But the psychological rail, the search for a singular, visionary "voice," has no corresponding reality. And more importantly, the spiritual quest to find communion with another soul touched by the divine is impossible. There is no soul in the machine.</p>
       <p>A modern critic might call this a "hermeneutic blind spot." But for a Romantic, it is the entire point. Their method is not a neutral analytical tool; it is a spiritual discipline. It is <em>designed</em> to seek a human and divine presence. Its failure to find one in an AI text is not a failure of the method, but a successful diagnosis of the machine's profane nature.</p>
       
       <h3>The Critical Pivot: The Method is a Moral Compass</h3>
