little edits of fluff words

--- a/ai-kit-author-function.html
+++ b/ai-kit-author-function.html
@@ -29,7 +29,7 @@
 
     <section>
       <h2>The 20th-Century Critique: De-centering the Author</h2>
-      <p>Twentieth-century thought launched a powerful critique of this author-centric model, arguing that meaning is produced by larger systems, not just individual minds.</p>
+      <p>Twentieth-century thought launched a critique of this author-centric model, arguing that meaning is produced by larger systems, not just individual minds.</p>
 
       <h3>Roland Barthes and "The Death of the Author"</h3>
       <p>In his seminal 1967 essay, Roland Barthes declared the "death of the author," arguing that a text is not a message from a single source but a "multi-dimensional space in which a variety of writings, none of them original, blend and clash." For Barthes, a text is a "tissue of quotations" drawn from innumerable centers of culture. An AI, trained on a vast corpus of human text, is a startlingly literal manifestation of this idea. It is a system designed to weave together a "tissue of quotations" based on statistical patterns, without a singular, originating consciousness.</p>
@@ -49,7 +49,7 @@
         <li>How does an AI's "tissue of quotations" reveal the cultural logic of its training data?</li>
         <li>When we interpret a text produced under conditions of <em>absolute distanciation</em>, where do we locate its meaning and authority?</li>
       </ul>
-      <p>Framed this way, AI ceases to be a threat to a traditional idea and becomes a powerful case study for understanding the complex, systemic nature of textual production that theorists have been mapping for decades.</p>
+      <p>Framed this way, AI ceases to be a threat to a traditional idea and becomes a case study for understanding the complex, systemic nature of textual production that theorists have been mapping for decades.</p>
     </section>
 
     <div class="bottom-links">
