--- a/ai-kit-butler-interiority.html
+++ b/ai-kit-butler-interiority.html
@@ -28,7 +28,7 @@
     
     <section>
       <h2>AI and the Mass Production of Sincerity</h2>
-      <p>This is precisely why AI is so unsettling. An LLM is a machine with no "inside." It is all surface, a system for manipulating signs. Yet, it can be prompted to produce texts that are emotionally resonant, seemingly sincere, and full of apparent depth. Yuval Noah Harari fears this as the "mass-production of intimacy." A Butlerian analysis sees it as something more fundamental: the mass production of the signs of interiority.</p>
+      <p>This is precisely why AI is so unsettling. An LLM is a machine with no "inside." It is all surface, a system for manipulating signs. Yet, it can be prompted to produce texts that are emotionally resonant, seemingly sincere, and full of apparent depth. Yuval Noah Harari fears this as the <a href="post32.html">"mass-production of intimacy."</a> A Butlerian analysis sees it as something more fundamental: the mass production of the signs of interiority.</p>
       <ul>
         <li><strong>The Romantic Fear:</strong> AI can mimic the expressions of a soul without having one. This is a profound deception.</li>
         <li><strong>The Butlerian Insight:</strong> AI's ability to generate a convincing "inner life" from the outside-in reveals that our own "inner life" is also constructed through a set of external, social performances.</li>
