--- a/ai-kit-butler-performativity.html
+++ b/ai-kit-butler-performativity.html
@@ -28,7 +28,7 @@
 
     <section>
       <h2>AI as the Ultimate Performative Author</h2>
-      <p>This is where AI becomes a powerful philosophical case study. An LLM performs the act of writing—the "deed"—perfectly, but without any pre-existing "doer" or "author" behind it. The Romantic critic sees this as AI's fundamental failure. A Butlerian reading sees it as the literalization of the condition of all authorship.</p>
+      <p>This is where AI becomes an interesting philosophical case study. An LLM performs the act of writing (the "deed") perfectly, but without any pre-existing "doer" or "author" behind it. The Romantic critic sees this as AI's fundamental failure. A Butlerian reading sees it as the literalization of the condition of all authorship.</p>
       <ul>
         <li><strong>The Romantic View:</strong> A human author has a soul (doer) that produces a text (deed). An AI produces a text (deed) without a soul (doer), so it is inauthentic.</li>
         <li><strong>The Butlerian View:</strong> The human "author" is also a fiction, a stable identity performatively constituted by the repeated act of writing. The AI, by generating the deed without the doer, simply exposes the mechanism that was at work all along.</li>
