--- a/ai-kit-butler-regulation.html
+++ b/ai-kit-butler-regulation.html
@@ -34,7 +34,7 @@
         <li><strong>The Romantic Demand:</strong> A text must come from a unified, authentic soul.</li>
         <li><strong>The Butlerian Analysis:</strong> The "unified, authentic soul" is a regulatory norm. AI's ability to simulate it on demand reveals that this norm is a set of learnable, performable conventions.</li>
       </ul>
-      <p>AI doesn't just challenge our idea of who can be an author. It exposes the "coherent author" as one of the most powerful regulatory fictions of our culture. It is a role we have been trained to perform, and one that a machine can now be trained to perform as well. By simulating the author, the AI unmasks the social regulations that produced the human author in the first place.</p>
+      <p>AI doesn't just challenge our idea of who can be an author. It exposes the "coherent author" as an important regulatory fictions of our culture. It is a role we have been trained to perform, and one that a machine can now be trained to perform as well. By simulating the author, the AI unmasks the social regulations that produced the human author in the first place.</p>
     </section>
 
     <div class="bottom-links">
