--- a/ai-kit-deleuze-assemblage.html
+++ b/ai-kit-deleuze-assemblage.html
@@ -16,7 +16,7 @@
       <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
     </div>
     <h1>The Human-AI Assemblage: A New Desiring-Machine</h1>
-    <p>Previous pages have established the AI text as an impersonal, <a href="ai-kit-deleuze-goodwill.html">productive machine</a> whose output can be either <a href="ai-kit-deleuze-forces.html">reactive or active</a>, emerging from a system of <a href="ai-kit-deleuze-monotony.html">monotonous repetition</a>. The final step is to stop seeing the human and the AI as separate entities. The most powerful Deleuzian move is to analyze the functional unit they create together: the <em>Human-AI Assemblage</em>.</p>
+    <p>Previous pages have established the AI text as an impersonal, <a href="ai-kit-deleuze-goodwill.html">productive machine</a> whose output can be either <a href="ai-kit-deleuze-forces.html">reactive or active</a>, emerging from a system of <a href="ai-kit-deleuze-monotony.html">monotonous repetition</a>. The final step is to stop seeing the human and the AI as separate entities. The Deleuzian move is to analyze the functional unit they create together: the <em>Human-AI Assemblage</em>.</p>
     <p>In <em>Anti-Oedipus</em>, a "desiring-machine" is not a metaphor. It is any system of connections, flows, and breaks that produces something. When a user prompts an LLM, they are not merely "using a tool"; they are forming an assemblage, a new, temporary desiring-machine.</p>
     
     <hr>
