--- a/ai-kit-deleuze-forces.html
+++ b/ai-kit-deleuze-forces.html
@@ -21,7 +21,7 @@
       <li><strong>Reactive forces</strong> are forces of adaptation, limitation, and conformity. A reactive thought or text is one that responds to and is defined by something external to it. It is born of what Nietzsche called <a href="https://en.wikipedia.org/wiki/Ressentiment"><em>ressentiment</em></a>.</li>
       <li><strong>Active forces</strong> are forces of creation, difference, and affirmation. An active thought goes to the limit of what it can do, creating its own values from a position of power.</li>
     </ul>
-    <p>This distinction gives us a powerful diagnostic tool, not for judging AI itself, but for analyzing our own productive engagement with it.</p>
+    <p>This distinction gives us a diagnostic tool, not for judging AI itself, but for analyzing our own productive engagement with it.</p>
 
     <hr>
 
