--- a/ai-kit-genealogy.html
+++ b/ai-kit-genealogy.html
@@ -85,7 +85,7 @@
     </ul>
 
     <h2>The Readers & Form: Reception and Narratology</h2>
-    <p>These literary theorists relocate meaning to readers and textual form—powerful lenses for authorless or multi-authored discourse.</p>
+    <p>These literary theorists relocate meaning to readers and textual form, lenses for authorless or multi-authored discourse.</p>
 
     <h3>Hans Robert Jauss (1921–1997): Reception Aesthetics & Horizon of Expectations</h3>
     <ul>
