--- a/ai-kit-glossary.html
+++ b/ai-kit-glossary.html
@@ -104,7 +104,7 @@
 
       <dt>Surveillance Capitalism (Zuboff)</dt>
       <dd>An economic logic that treats human experience as free raw material for data extraction, analysis, and the creation of prediction products.</dd>
-      <p class="why"><strong>Why it matters:</strong> Provides the key framework for understanding the risks of "being read by an AI," where our interactions become data for a predictive system.</p>
+      <p class="why"><strong>Why it matters:</strong> Provides the key method or heuristic for understanding the risks of "being read by an AI," where our interactions become data for a predictive system.</p>
 
       <dt>World of the Text (Ricoeur)</dt>
       <dd>The possible world or mode of being that a text projects in front of itself, which the reader can inhabit through interpretation.</dd>
@@ -117,7 +117,7 @@
       <dd>His "Death of the Author" is the theoretical starting point for reading authorless texts.</dd>
       
       <dt>Gilles Deleuze (1925–1995)</dt>
-      <dd>Provides a radical critique of the unified subject and a philosophy of impersonal forces, offering powerful tools for analyzing AI beyond Romantic categories.</dd>
+      <dd>Provides a radical critique of the unified subject and a philosophy of impersonal forces, offering tools for analyzing AI beyond Romantic categories.</dd>
       
       <dt>Hans-Georg Gadamer (1900–2002)</dt>
       <dd>His dialogical model of reading explains how texts can "read us" back.</dd>
