--- a/ai-kit-hermeneutics-of-risk.html
+++ b/ai-kit-hermeneutics-of-risk.html
@@ -35,7 +35,7 @@
       <p>We can organize the potential dangers of AI into two distinct categories, each relating to a different direction of the interpretive act.</p>
 
       <h3>1. The Risks of Reading AI-Generated Texts</h3>
-      <p>These are risks that arise from our interpretation of the machine's output. They are often intensified versions of the dangers posed by any powerful text.</p>
+      <p>These are risks that arise from our interpretation of the machine's output. They are often intensified versions of the dangers posed by any persuasive text.</p>
       <ul>
         <li><strong>Sophisticated Misinformation:</strong> The "dangerous book" tradition warns of texts that spread falsehoods. AI can generate such texts (e.g., propaganda, fake news) with unprecedented scale and personalization, making them potentially more effective and harder to identify.</li>
         <li><strong>Cultural Homogenization:</strong> An LLM, as a <a href="post37.html"></a> "blurry JPEG of the web" (Ted Chiang), tends to reproduce the most statistically common patterns from its training data. A risk of over-reliance on such texts is a potential flattening of linguistic and cultural diversity, reinforcing a global monoculture.</li>
@@ -47,7 +47,7 @@
       <ul>
         <li><strong>Data Extraction and Surveillance:</strong> Our interactions with an AI are data. This data can be stored, analyzed, and used for purposes unknown to us. This model of data capture has been described by scholars like Shoshana Zuboff as "surveillance capitalism," where personal experience is treated as a free raw material.</li>
         <li><strong>Reduction and Categorization:</strong> To process your input, an AI must categorize you and your request. The risk is that this computational model of you is a radical simplification of your personhood. You are reduced to a set of predictable patterns, and your unique identity is flattened into a type.</li>
-        <li><strong>Algorithmic Shaping of the Self:</strong> As the AI models you, it tailors its responses to what it predicts you want or need. This creates a powerful feedback loop that can subtly shape your thoughts, desires, and even your sense of self. This aligns with Michel Foucault's concept of "technologies of the self," where modern forms of power operate by shaping individuals from within.</li>
+        <li><strong>Algorithmic Shaping of the Self:</strong> As the AI models you, it tailors its responses to what it predicts you want or need. This creates a feedback loop that can subtly shape your thoughts, desires, and even your sense of self. This aligns with Michel Foucault's concept of "technologies of the self," where modern forms of power operate by shaping individuals from within.</li>
       </ul>
       <p>A complete hermeneutics for the age of AI must therefore be a dual practice: a critical reading of the machine's words, and a critical awareness of how the machine is, in turn, reading us.</p>
     </section>
