--- a/ai-kit-interpretive-dialogue.html
+++ b/ai-kit-interpretive-dialogue.html
@@ -16,7 +16,7 @@
       <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
     </div>
     <h1>The Interpretive Dialogue: When the Text Reads the Reader</h1>
-    <p>Interpretation is often imagined as a one-way action: the reader actively extracts meaning from a passive text. However, a central insight of modern hermeneutics is that this process is a dialogue. A powerful text is never passive; it acts upon the reader, challenges their assumptions, and reshapes their understanding of the world. Before we can assess how an AI might "read" us, we must first understand how a traditional book already does.</p>
+    <p>Interpretation is often imagined as a one-way action: the reader actively extracts meaning from a passive text. However, a central insight of modern hermeneutics is that this process is a dialogue. A truly influential or persuasive text is never passive; it acts upon the reader, challenges their assumptions, and reshapes their understanding of the world. Before we can assess how an AI might "read" us, we must first understand how a traditional book already does.</p>
 
     <hr>
 
