--- a/post40.html
+++ b/post40.html
@@ -30,7 +30,7 @@
 
             <p>This, the academics argue, is exactly what an LLM does. It is not designed to represent the world or to track facts. It is a machine for generating plausible sequences of words. Its goal is to "sound normal," not to be correct. It is, by its very nature, a bullshitter.</p>
 
-            <p>This argument fits into the framework I've been building here. It's a moral critique, and near its moral center is sincerity. They might say they really care about truth, not feelings like sincerity. But I'm not so sure. I think the moral outrage is tied to this idea of authenticity. It finds AI to be at fault because it lacks the right kind of intention, the intention to speak truthfully. This is part of what I've called <a href="post9.html">"Romantic Evil"</a>: a charge of inauthenticity, of "speaking words one does not inhabit."</p>
+            <p>This argument fits into the set of ideas I've been building here. It's a moral critique, and near its moral center is sincerity. They might say they really care about truth, not feelings like sincerity. But I'm not so sure. I think the moral outrage is tied to this idea of authenticity. It finds AI to be at fault because it lacks the right kind of intention, the intention to speak truthfully. This is part of what I've called <a href="post9.html">"Romantic Evil"</a>: a charge of inauthenticity, of "speaking words one does not inhabit."</p>
 
             <p>It also echoes other critiques I've summarized:</p>
             <ul>
