--- a/post55.html
+++ b/post55.html
@@ -23,7 +23,7 @@
 <main>
 <article>
 <h2>55 More Than Bullshit: The Soulless Chaos of the Machine</h2>
-<p>A powerful critique labels LLMs as "bullshit machines," indifferent to the truth. From a Romantic view, this is a charge of radical <a href="romantic-kit-authenticity.html">inauthenticity</a>. But this critique is too generous. It grants the machine a semblance of agency. The bullshitter, after all, has a purpose. The rigorous Romantic toolkit reveals a deeper, more damning truth.</p>
+<p>There's a pretty influential critique that labels LLMs as "bullshit machines," indifferent to the truth. From a Romantic view, this is a charge of radical <a href="romantic-kit-authenticity.html">inauthenticity</a>. But this critique is too generous. It grants the machine a semblance of agency. The bullshitter, after all, has a purpose. The rigorous Romantic toolkit reveals a deeper, more damning truth.</p>
 <p>Friedrich Schlegel argued that a great work "aims at more than it knows," carrying <strong>unconscious meanings</strong>. He believed a text's "confusions" and contradictions were themselves meaningful, revealing the author's internal struggles.<sup><a href="#ref1">1</a></sup> For a visionary like William Blake, art was a "Mental Fight," the struggle to give form to divine imagination.<sup><a href="#ref2">2</a></sup> Flaws and "confusions" in such a work are the scars of a noble battle. What happens when we apply this lens to AI?</p>
 
   <h3>From Bullshit to Chaos: An Example</h3>
