--- a/post62.html
+++ b/post62.html
@@ -43,7 +43,7 @@
             <h4>Key Questions for the Teleological Reading:</h4>
             <ul>
                 <li><strong>What thought does this text "give rise to"?</strong> This is Ricoeur's key phrase. Even in its flaws, does the AI's output spark a new idea? Does a strange juxtaposition of concepts force you to see your own topic in a new light? This "surplus of meaning" is not in the AI; it is a product of your interaction with the text.</li>
-                <li><strong>What latent cultural logic does it reveal?</strong> The AI, in its unthinking recombination of linguistic patterns, can function as a powerful instrument for revealing the hidden myths and metaphors of our culture. When an AI writes about business using the language of warfare, for example, it is revealing a deep structural metaphor in our collective "textual unconscious."</li>
+                <li><strong>What latent cultural logic does it reveal?</strong> The AI, in its unthinking recombination of linguistic patterns, can function as an instrument for revealing the hidden myths and metaphors of our culture. When an AI writes about business using the language of warfare, for example, it is revealing a deep structural metaphor in our collective "textual unconscious."</li>
                 <li><strong>How does it advance my own "process of becoming conscious"?</strong> In a chat interaction, the goal is not to get a perfect answer. The goal is to use the AI's responses as a tool to refine your own questions. Each inadequate or flawed response forces you to become more precise, more aware of your own assumptions. The AI becomes a catalyst for your own self-understanding.</li>
             </ul>
             <p>This second step makes you the active and responsible center of interpretation. The meaning is not a pre-existing thing to be discovered in the AI, but a new thing to be created through your dialectical engagement with its output.</p>
@@ -56,7 +56,7 @@
                 <li>Circle back to <em>archeology</em>: "This new idea wasn't 'created' by the AI, but was an accidental byproduct of its non-human, statistical method of combining words, a method a human writer, constrained by convention, might never have tried."</li>
                 <li>Arrive at a <em>dialectical synthesis</em>: "The AI text, a product of a non-conscious, 'archaic' linguistic process, has become the occasion for a forward-looking, 'teleological' expansion of my own creative consciousness."</li>
             </ol>
-            <p>By using this Ricoeurian framework, you move beyond the simplistic and unanswerable question, "Does the AI <em>mean</em> what it 'says'?" and begin to engage with the far more productive and philosophically rich question, "What can be meant <em>through</em> it?" You treat the AI not as a fraudulent author, but as a powerful, eloquent, and deeply ambiguous cultural symbol that, above all, gives rise to thought.</p>
+            <p>By using this Ricoeurian pov-system, you move beyond the simplistic and unanswerable question, "Does the AI <em>mean</em> what it 'says'?" and begin to engage with the far more productive and philosophically rich question, "What can be meant <em>through</em> it?" You treat the AI not as a fraudulent author, but as an eloquent and deeply ambiguous cultural symbol that, above all, gives rise to thought.</p>
 
             <p><a href="index.html">Home</a> | <a href="post61.html">Previous Post</a> | <a href="post63.html">Next Post</a></p>
         </article>
