--- a/post66.html
+++ b/post66.html
@@ -23,7 +23,7 @@
         <article>
             <h2>66 Augustine's Signs</h2>
             <p>In my <a href="post65.html">last post</a>, I was thinking about Socrates and his critique of writing. The moment you write something down, it becomes an orphan, cut off from the living person who created it. This creates a problem for anyone who wants to draw a bright, sacred line between human-made texts and AI-made texts. The Socratic argument is that all written texts—human or not—are already separated from their source.</p>
-            <p>This line of thinking isn't new. I was looking through Augustine's classic work on interpretation, <a href="https://www.ntslibrary.com/PDF%20Books/Augustine%20doctrine.pdf" target="_blank"><em>On Christian Doctrine</em></a>, and he provides a powerful framework for seeing a text not as a person, but as a system of signs.</p>
+            <p>This line of thinking isn't new. I was looking through Augustine's classic work on interpretation, <a href="https://www.ntslibrary.com/PDF%20Books/Augustine%20doctrine.pdf" target="_blank"><em>On Christian Doctrine</em></a>, and he provides a heuristic for seeing a text not as a person, but as a system of signs.</p>
             <p>Early in the book, Augustine makes a crucial distinction:</p>
             <blockquote>
                 All instruction is either about things or about signs; but things are learnt by means of signs... For a sign is a thing which, over and above the impression it makes on the senses, causes something else to come into the mind as a consequence of itself.
