--- a/romantic-kit-authenticity.html
+++ b/romantic-kit-authenticity.html
@@ -31,7 +31,7 @@
     </ul>
 
     <h2>The Legacy of Authenticity</h2>
-    <p>The Romantic "cult of the self" was a powerful reaction against what was seen as the superficial or socially imposed identities of Enlightenment society. Instead, Romantics celebrated original genius, whether that genius is the solitary visionary artist or the uneducated peasant whose folk song conveys genuine feeling. This ideal remains a lasting legacy, underpinning modern notions of artistic originality, self-expression, and personal integrity.</p>
+    <p>The Romantic "cult of the self" was a reaction against what was seen as the superficial or socially imposed identities of Enlightenment society. Instead, Romantics celebrated original genius, whether that genius is the solitary visionary artist or the uneducated peasant whose folk song conveys genuine feeling. This ideal remains a lasting legacy, underpinning modern notions of artistic originality, self-expression, and personal integrity.</p>
 
     <h2>Authenticity as a Process: The Theodicy of the Self</h2>
     <p>The quest for authenticity was more than a stylistic preference; it was a profound spiritual project. Many Romantic works are a form of secular "theodicy," an attempt to justify the ways of the world to the individual mind. Where Milton sought to "justify the ways of God to men," a poet like Wordsworth sought to justify the experience of loss and suffering as essential to the growth of his own mind.</p>
