--- a/romantic-kit-hermeneutics.html
+++ b/romantic-kit-hermeneutics.html
@@ -18,7 +18,7 @@
     <h1>A Romantic Method for Reading</h1>
 
     <p>The Romantics didn't just have new ideas about art; they developed a new <em>method</em> for understanding it. This was a core part of their self-conscious project to define and champion a new literature against the prevailing standards of Neoclassicism.<sup><a href="#ref5">1</a></sup> At its heart is a radical premise from the philosopher Friedrich Schleiermacher: understanding is not our default state. <strong>Misunderstanding is the norm.</strong> Therefore, interpretation isn't a passive reception of meaning; it's a methodical art that must be "willed and sought at every point."</p>
-    <p>This toolkit gives you that method. It’s a rigorous framework for analyzing a text by reconstructing the unique creative vision that gave it shape.</p>
+    <p>This toolkit gives you that method. It’s a rigorous way analyze a text by reconstructing the unique creative vision that gave it shape.</p>
 
     <h2>The Core Method: A Four-Step Loop</h2>
     <p>Schleiermacher’s process is a loop, not a checklist. You move through these steps iteratively, refining your understanding with each pass.</p>
