--- a/romantic-kit-organic-form.html
+++ b/romantic-kit-organic-form.html
@@ -17,7 +17,7 @@
     </div>
     <h1>The Organic vs. The Mechanical (A Theory of Form)</h1>
     <p>The Romantics proposed a radical alternative to the Enlightenment's view of the universe as a clockwork machine. They saw nature, art, and even society not as mechanical assemblies of parts, but as <em>living organisms</em>: dynamic, developing wholes where the form grows from an inner, vital principle.</p>
-    <p>This creates a powerful analytical lens for interpretation: is the structure of this work <strong>organic</strong> or <strong>mechanical</strong>?</p>
+    <p>This creates an analytical lens for interpretation: is the structure of this work <strong>organic</strong> or <strong>mechanical</strong>?</p>
 
     <h2>How to Read for Form</h2>
     <p>This distinction was most famously articulated by Samuel Taylor Coleridge, who drew heavily on German thinkers like A. W. Schlegel.</p>
