--- a/ai-kit-dangerous-book.html
+++ b/ai-kit-dangerous-book.html
@@ -16,13 +16,13 @@
       <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
     </div>
     <h1>The Dangerous Book: On Texts That Transform and Transgress</h1>
-    <p>The suggestion that AI-generated texts might be "dangerous" often sounds like a uniquely 21st-century alarm. Yet, the belief that texts can be powerful, transformative, and therefore dangerous, is one of the oldest ideas in intellectual history. Societies have long recognized that certain forms of discourse can challenge established truths and reshape human consciousness, for better or for worse. To think clearly about the potential risks of AI, we must first place them in this long tradition.</p>
+    <p>The suggestion that AI-generated texts might be "dangerous" often sounds like a uniquely 21st-century alarm. Yet, the belief that texts can be transformative, and therefore dangerous, is one of the oldest ideas in intellectual history. Societies have long recognized that certain forms of discourse can challenge established truths and reshape human consciousness, for better or for worse. To think clearly about the potential risks of AI, we must first place them in this long tradition.</p>
 
     <hr>
 
     <section>
       <h2>Plato's Fear of Poetry: The Original "Dangerous Text"</h2>
-      <p>The Western tradition's concern with textual danger begins with Plato. In <em>The Republic</em>, he famously argued for the censorship of poets in his ideal state. His reasoning was explicitly hermeneutic: he believed that powerful art was dangerous because it bypasses reason and appeals directly to the emotions. He feared that mimetic art—art that imitates reality—could plant falsehoods in the souls of citizens, corrupting their character and undermining the stability of the state. For Plato, the danger of art was a direct consequence of its interpretive power.</p>
+      <p>The Western tradition's concern with textual danger begins with Plato. In <em>The Republic</em>, he famously argued for the censorship of poets in his ideal state. His reasoning was explicitly hermeneutic: he believed that art was dangerous because it bypasses reason and appeals directly to the emotions. He feared that mimetic art—art that imitates reality—could plant falsehoods in the souls of citizens, corrupting their character and undermining the stability of the state. For Plato, the danger of art was a direct consequence of its interpretive power.</p>
     </section>
 
     <section>
@@ -32,14 +32,14 @@
     
     <section>
       <h2>A Modern Hermeneutic View of Textual Power</h2>
-      <p>Contemporary hermeneutics provides a framework for understanding this power in secular terms. Following Paul Ricoeur, we can understand a powerful text as one that projects a "world of the text." This is not just a collection of information, but a coherent, inhabitable reality that the reader can enter through the act of interpretation. </p>
+      <p>Contemporary hermeneutics provides an intellectual system for understanding this power in secular terms. Following Paul Ricoeur, we can understand a powerful text as one that projects a "world of the text." This is not just a collection of information, but a coherent, inhabitable reality that the reader can enter through the act of interpretation. </p>
       <p>A "dangerous" book, in this view, is one whose projected world is so compelling that it can radically alter the reader's own world. </p>
       <ul>
           <li>A revolutionary political tract projects a world where current injustices are intolerable and a new social order is possible.</li>
           <li>A profound philosophical work projects a world where our common-sense assumptions are revealed as illusions.</li>
           <li>A great novel projects a world that can permanently reconfigure our capacity for empathy.</li>
       </ul>
-      <p>The "danger" of a text is directly proportional to its power to perform what Hans-Georg Gadamer called a "fusion of horizons"—the ability to fundamentally change the reader's perspective. A book that cannot change you, and is therefore not "dangerous" in this sense, is arguably not worth reading. The perceived risk of AI-generated text is therefore not a new problem, but a new instance of an ancient one: how do we engage with powerful media that has the capacity to remake us?</p>
+      <p>The "danger" of a text is directly proportional to its power to perform what Hans-Georg Gadamer called a "fusion of horizons"—the ability to fundamentally change the reader's perspective. A book that cannot change you, and is therefore not "dangerous" in this sense, is arguably not worth reading. The perceived risk of AI-generated text is therefore not a new problem, but a new instance of an ancient one: how do we engage with media that has the capacity to remake us?</p>
     </section>
 
     <div class="bottom-links">
